# TinyLang

./: .clang-format  CMakeLists.txt  README.md
cmake/modules/: AddTinyLang.cmake
doc/: bnf.txt
include/TinyLang/AST/: AST.h
include/TinyLang/Basic/: Diagnostic.def  Diagnostic.h  LLVM.h  TokenKinds.def  TokenKinds.h  Version.h
include/TinyLang/CodeGen/: CGModule.h  CGProcedure.h
include/TinyLang/Lexer/: Lexer.h  Token.h
include/TinyLang/Parser/: Parser.h
include/TinyLang/Semantic/: Scope.h  Sema.h
lib/: CMakeLists.txt
lib/Basic/: CMakeLists.txt  Diagnostic.cpp  TokenKinds.cpp  Version.cpp
lib/CodeGen/: CGProcedure.cpp  CMakeLists.txt
lib/Lexer/: CMakeLists.txt  Lexer.cpp
lib/Parser/: CMakeLists.txt  Parser.cpp
lib/Semantic/: CMakeLists.txt  Scope.cpp  Sema.cpp
tools/: CMakeLists.txt
tools/driver/: CMakeLists.txt  Driver.cpp
